--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 flask~=2.0.1
-pyyaml~=5.4.1
+pyyaml
 redis~=3.5.3
-joker>=0.2.2
+joker~=0.2.6
+joker-redis~=0.0.2
 volkanic>=0.3.6
 orjson~=3.6.0
 jsonschema~=3.2.0
