--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 flask~=2.0.1
+joker-redis~=0.0.3
+joker~=0.3.0
+jsonschema~=3.2.0
+orjson~=3.6.0
 pyyaml
 redis~=3.5.3
-joker~=0.2.6
-joker-redis~=0.0.2
-volkanic>=0.3.6
-orjson~=3.6.0
-jsonschema~=3.2.0
+volkanic~=0.4.0
